# wordle.rs

./: Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  default-nginx.conf  index.html  styles.css  styles.css.map  styles.scss  tailwind.config.js  tailwind.css
kubernetes/: kustomization.yaml
kubernetes/base/: kustomization.yaml  mongodb.yaml  wordle-backend-cm.yaml  wordle-backend-mongo.yaml  wordle-backend-secret.yaml  wordle-backend.yaml  wordle-frontend-nginx-cm.yaml  wordle-frontend.yaml  wordle-ingress-backend.yaml  wordle-ingress-frontend.yaml  wordle-ingress.yaml
src/: answer_input.rs  charcell.rs  game_model.rs  keyboard.rs  leaderboard.rs  main.rs  menu.rs  register.rs  routes.rs  snackbar.rs  user_model.rs  wordle.rs
