[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
wasm-logger = "0.2.0"
log = "0.4.14"
reqwasm = { version = "0.4.1" }
url = "2.2.2"
cookie_store = "0.15.1"
gloo = "0.6.0"
js-sys = "0.3"
web-sys = { version = "0.3.56", features = ["RequestCredentials", "HtmlDocument"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = "1.0.136"
serde_json = "1.0.79"